New linked, FIFO & LIFO working.